# GameEngine

./: .gitignore  README.md
GameEngine/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  vcpkg.json
GameEngine/GameEngine/: CMakeLists.txt  GameEngine.cpp  GameEngine.h  Main.cpp  WindowMain.cpp
GameEngine/GameEngine/Utils/: CmakeLists.txt  mesh.h  model.h  shaders.h
GameEngine/GameEngine/shaders/: 00_basic.frag  00_basic.vert
GameEngine/src/: 09_illumination_models.vert  10_illumination_models.frag  Matrix.hpp  main.cpp
GameEngine/test/: CMakeLists.txt
